[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Header-dinrundschriftmittel.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/MinimaxDebugUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MinimaxDebug" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RootNode" type="Label" parent="Control/HBoxContainer"]
margin_right = 90.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Root :"

[node name="TreeDepth" type="Label" parent="Control/HBoxContainer"]
margin_left = 190.0
margin_right = 378.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "Tree Depth :"

[node name="Leaves" type="Label" parent="Control/HBoxContainer"]
margin_left = 478.0
margin_right = 594.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Leaves"

[node name="ResultNode" type="Label" parent="Control/HBoxContainer"]
margin_left = 694.0
margin_right = 872.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Final Node :"
